[package]
name = "pngindexed"
version = "0.8.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Simplifies the creation of indexed png images. Uses png and bitvec crates."
authors = ["Apps4u_co"]
#homepage="http://apps4u.co/"
documentation="https://docs.rs/pngindexed"
repository="https://github.com/apps4uco/pngindexed"
keywords = ["graphics","bitmap","indexed","png"]
categories = ["command-line-utilities","graphics","web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.0"
#bit-vec="0.6.3"
#palette = "0.6.0"
png = "0.17.5"

[dev-dependencies]
anyhow = "1.0.57"
criterion = "0.3.5"
image = "0.24.1"

[[bench]]
name = "benchmark"
harness = false
